update REST API
